--- a/app/src/main/res/layout/activity_fullscreen_alarm.xml
+++ b/app/src/main/res/layout/activity_fullscreen_alarm.xml
@@ -1,14 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000">
+    tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/dismissButton"
+        android:id="@+id/btn_Dismiss"
+        android:layout_width="199dp"
+        android:layout_height="62dp"
+        android:layout_marginBottom="300dp"
+        android:text="Dismiss"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn_Snooze"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dismiss"
-        android:layout_gravity="center"
-        android:padding="20dp" />
-</FrameLayout>
+        android:layout_marginTop="105dp"
+        android:layout_marginBottom="147dp"
+        android:text="Snooze"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_Dismiss" />
+</androidx.constraintlayout.widget.ConstraintLayout>
